fix up comment formatting, and wrapping bug in <pre>

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -29,7 +29,7 @@ article h2,
 
 #comments input[type=text], #comments input[type=email], #comments textarea,
 /*article {font-family: "Average", "Georgia", serif;}*/
-article {font-family: "Open Sans", Arial, sans-serif;}
+article, #comments {font-family: "Open Sans", Arial, sans-serif;}
 
 /********* Colors ******/
 
@@ -74,7 +74,8 @@ article iframe.twitter-tweet {
 /* code blocks */
 
 /* inline code, <code> only */
-article code, article .highlight {
+article code, #comments code,
+article .highlight, #comments .highlight {
   padding: 2px 4px;
   background-color: #eaeaff;
   border: 1px solid #d5d5d5;
@@ -83,12 +84,14 @@ article code, article .highlight {
 }
 
 /* blocks of code, <pre><code> */
-article .highlight pre {
+article .highlight pre,
+#comments .highlight pre {
   display: block;
   padding: 5px 10px;
   font-size: 13px;
   line-height: 1.7;
-}
+  width: 630px;
+} #comments .highlight pre {width: 580px;}
 
 
 /********** Font sizes *************/
@@ -108,6 +111,8 @@ article .callout {font-size: 11pt; line-height: 20px;}
 
 article blockquote,
 article blockquote p,
+#comments blockquote,
+#comments blockquote p,
 article .body blockquote ul, article .body blockquote ol,
 article .body blockquote ul li, article .body  blockquote ol li,
 article .body blockquote * {font-size: 11pt; line-height: 20px;} /* blockquotes */
@@ -152,18 +157,24 @@ article .body blockquote ul li, article .body blockquote ol li {list-style-posit
 article .body ul, article .body ul li {list-style-type: disc;}
 article .body ol, article .body ol li {list-style-type: decimal;}
 
-article .body pre {
+article .body pre,
+#comments .body pre {
   white-space: pre-wrap;
   font-family: inherit;
+  word-break: break-word;
 }
 
 article .body li {width: 610px;}
 
 article .body blockquote ul,
-article .body blockquote ol {width: 550px;}
+article .body blockquote ol,
+#comments .body blockquote ul,
+#comments .body blockquote ol {width: 550px;}
 
 article .body blockquote ol li,
-article .body blockquote ul li {padding: 0 20px; width: 510px;}
+article .body blockquote ul li,
+#comments .body blockquote ol li,
+#comments .body blockquote ul li {padding: 0 20px; width: 510px;}
 
 article .body h2 {
   margin-top: 45px;
@@ -182,19 +193,28 @@ article .body h3 {margin-top: 35px;}
 
 article iframe.youtube {height: 394px;}
 
-article blockquote {
+article blockquote,
+#comments blockquote {
   padding: 1px 20px;
   border: 1px solid #888;
   border-width: 0 1px;
   margin-top: 27px; margin-bottom: 27px;
   background-color: #e5e5e5;
-}
+} #comments blockquote {border-width: 0 0 0 1px;}
+
 article blockquote cite {
   width: 100%; display: block; text-align: right; margin-top: -5px;
 } article blockquote cite:before {content: "— "}
 
 article blockquote,
-article blockquote p {width: 550px;}
+article blockquote p,
+#comments blockquote,
+#comments blockquote p {width: 550px;}
+
+article blockquote blockquote,
+article blockquote blockquote p,
+#comments blockquote blockquote,
+#comments blockquote blockquote p {width: 500px;}
 
 article .callout {
   background-color: rgb(213, 230, 255);
@@ -388,7 +408,7 @@ article .related li time {display: inline-block;}
 #comments li .body {
   background-color: #e5e5e5;
   border: 1px solid #c5c5c5;
-  padding: 0 10px; margin: 10px 0;
+  padding: 10px 20px; margin: 10px 0;
 }
 
 
